# gio

./: .gitignore  AUTHORS  COPYING  INSTALL.md  Makefile.am  README.md  RELEASE_NOTES.md  SECURITY.md  configure.ac  sneak_peek.md
.github/workflows/: main.yml  pnetcdf.yml
docs/: APIs.md  DEVELOPER_NOTES.md  hints.md
examples/: Makefile.am  ex_read_coll.c  ex_read_indep.c  ex_write_coll.c  ex_write_indep.c  parallel_run.sh
m4/: check_cc.m4  check_mpi.m4
src/: Makefile.am  gio-config.in  gio.h.in  gio_aggregate.c  gio_close.c  gio_delete.c  gio_errors.c  gio_flatten_subarray.c  gio_fstype.c  gio_hints.c  gio_lib_version.c  gio_lock.c  gio_lustre_open.c  gio_lustre_wr_coll.c  gio_mem_alloc.c  gio_open.c  gio_read_coll.c  gio_read_indep.c  gio_set_size.c  gio_sync.c  gio_ufs_open.c  gio_ufs_rd_coll.c  gio_ufs_rd_indep.c  gio_ufs_wr_coll.c  gio_ufs_wr_indep.c  gio_utils.c  gio_write_coll.c  gio_write_indep.c  gioi.h
test/: Makefile.am  check_fstype.c  parallel_run.sh  seq_runs.sh  tst_ghost_cell.c  tst_memcpy.c  tst_utils.c  tst_utils.h
utils/: Makefile.am  README.md  gio-config.in  gio_version.1  gio_version.c
utils/packaging/: Makefile.am  gio.pc.in
